--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -39,8 +42,6 @@ dependencies {
     implementation 'com.google.mlkit:translate:17.0.0'
     implementation 'com.google.firebase:firebase-ml-natural-language:22.0.0'
     implementation 'com.google.firebase:firebase-ml-natural-language-language-id-model:20.0.7'
-    //implementation 'com.google.mlkit:language-id:17.0.3'
-    //implementation 'com.google.android.gms:play-services-mlkit-language-id:17.0.0-beta1'
 
     //camera dependencies
     implementation "androidx.camera:camera-core:1.1.0-beta03"
@@ -48,6 +49,9 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:1.1.0-beta03"
     implementation "androidx.camera:camera-view:1.1.0-beta03"
     implementation "androidx.camera:camera-extensions:1.1.0-beta03"
+
+    //worker dependencies
+    implementation "androidx.work:work-runtime:2.7.1"
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
