--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,9 @@ android {
 dependencies {
     //firebase dependencies
     implementation platform('com.google.firebase:firebase-bom:30.0.0')
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-auth:21.0.5'
     implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.android.gms:play-services-appindex:16.1.0'
 
     //translate dependencies
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
